--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
                 text-align: center;
             }
             h1{
-                color: #9F92E8;
+                color: #111;
                 font-family: 'Lato', sans-serif;
             }
             table{
                 margin:0 auto;
-                border: 4px groove #99D3F2;
+                border: 4px groove #222;
             }
             .botao input{
                 width: 30px;
@@ -23,7 +23,7 @@
                 padding: 2px;
             }
             body{
-                background-color: #92E0E8;
+                background-color: #111;
             }
         </style>
         <script src="js/js.js"></script>
