--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             }
             table{
                 margin:0 auto;
-                border: 4px groove #222;
+                border: 4px solid #222;
+                border-radius: 5px;
             }
             .botao input{
                 width: 30px;
