--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <style>
             *{
                 text-align: center;
+                border: 4px solid #222;
+                border-radius: 10px;
             }
             h1{
                 color: #111;
