--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 text-align: center;
             }
             h1{
-                color: #111;
+                color: #fff;
                 font-family: 'Lato', sans-serif;
             }
             table{
@@ -24,6 +24,7 @@
                 padding: 2px;
                 border: 4px solid #222;
                 border-radius: 10px;
+                background-color: #5829b4;
             }
             body{
                 background-color: #111;
