--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 padding: 2px;
                 border: 4px solid #222;
                 border-radius: 10px;
-                background-color: #5829b4;
+                color: #fff;
             }
             body{
                 background-color: #111;
