--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
                 padding: 2px;
                 border: 4px solid #222;
                 border-radius: 10px;
-                color: #fff;
             }
             body{
-                background-color: #111;
+                background-color: #fff;
             }
         </style>
         <script src="js/js.js"></script>
