--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                 padding: 2px;
                 border: 4px solid #222;
                 border-radius: 10px;
+                color: #fff;
             }
             body{
-                background-color: #fff;
+                background-color: #111;
             }
         </style>
         <script src="js/js.js"></script>
