--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
                 border-radius: 10px;
                 color: #fff;
             }
+
+            .botao input .onclick{
+                width: 30px;
+                margin: 1px;
+                padding: 2px;
+                border: 4px solid #222;
+                border-radius: 10px;
+                color: #111;
+            }
             body{
                 background-color: #111;
             }
