--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
                 border: 4px solid #222;
                 border-radius: 10px;
             }
+            
             .botao input{
                 width: 30px;
                 margin: 1px;
                 padding: 2px;
                 border: 4px solid #222;
                 border-radius: 10px;
-                color: #444;
+                background-color: #333;
+                color: #fff;
             }
             
             body{
