--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 background-color: #333;
                 color: #fff;
             }
+
+            tr {
+                background-color: #fff;
+            }
             
             body{
                 background-color: #111;
