--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 color: #fff;
             }
 
-            tr {
+            .tela {
                 background-color: #fff;
             }
             
@@ -44,7 +44,7 @@
         <h1>Calculadora</h1>
         <form name="calc">
             <table>
-                <tr >
+                <tr class="tela">
                     <td>
                         <input type="text" name="tela" style="text-align:right" disabled>
                     </td>
