--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             h1{
                 color: #fff;
                 font-family: 'Lato', sans-serif;
+                font-size: 24px;
             }
             table{
                 margin:0 auto;
@@ -35,6 +36,8 @@
             
             body{
                 background-color: #111;
+                width: 100%;
+                height: 100%;
             }
         </style>
         <script src="js/js.js"></script>
