--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                 width: 100%;
                 height: 100%;
             }
+
+            table {
+                width: 400px;
+                height: 600px;
+            }
         </style>
         <script src="js/js.js"></script>
     </head>
