--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 height: 100%;
             }
 
-            table {
+            form {
                 width: 400px;
                 height: 600px;
             }
