--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             }
 
             form {
-                width: 400px;
-                height: 600px;
+                width: 60%;
+                height: 80%;
             }
         </style>
         <script src="js/js.js"></script>
