--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             h1 {
                 color: #fff;
                 font-family: 'Lato', sans-serif;
-                font-size: 24px;
+                font-size: 18px;
                 marin: 10px 0
             }
             table {
                 margin: 0 auto;
                 border: 2px solid #222;
-                border-radius: 8px;
+                border-radius: 2px;
             }
             
             .botao input {
@@ -32,8 +32,9 @@
             }
 
             .tela {
-                background-color: #fff;
-                border-radius: 8px
+                background-color: #fff
+                border: 2px solid #222;
+                border-radius: 5px;
             }
             
             body{
