--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             }
             table {
                 margin: 0 auto;
-                border: 2px solid #222;
+                border: 2px solid #fff;
                 border-radius: 2px;
             }
             
