--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             }
             table {
                 margin: 0 auto;
-                border: 2px solid #fff;
+                border: 2px solid #222;
                 border-radius: 2px;
             }
             
@@ -32,9 +32,7 @@
             }
 
             .tela {
-                background-color: #fff
-                border: 2px solid #222;
-                border-radius: 5px;
+                background-color: #fff;
             }
             
             body{
