--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
             }
             
             .modo-noturno {
-                
                 background-color: #111;
                 border: 2px solid #fff;
                 color: #fff;
@@ -55,7 +54,7 @@
                 width: 30px;
                 border: 2px solid #222;
                 background-color: #111;
-                color: #fff;
+                color: #111;
             }
 
             h1 .modo-noturno{
